# FlowForge

./: .env.example  .env.local  .gitignore  Makefile  PHASE-3-COMPLETE.md  PHASE-4-COMPLETE.md  README-PHASE-3-4-COMPLETE.md  README.md  START-HERE.md  memory.json.backup  package-lock.json  package.json  test.sh
app/: globals.css  layout.tsx  page.tsx
backend/: pyproject.toml
backend/forgeflow/: __init__.py  api.py  cli.py  config.py  db.py  graph.py  sandbox.py  state.py  tracing.py
backend/forgeflow/agents/: __init__.py  _llm.py  architecture.py  code_generation.py  code_review.py  documentation.py  evaluation.py  spec_analyst.py
backend/forgeflow/eval/: __init__.py  build_test.py  coverage.py  doc_completeness.py  loader.py  review_precision.py  run.py
backend/tests/: conftest.py  test_agents.py  test_integration_phase1.py  test_phase2_agents.py  test_phase3_documentation.py  test_phase3_evaluation.py  test_phase3_integration.py  test_phase3_loader.py  test_phase3_scorers.py  test_phase4_api.py  test_state.py
components/: ChatSidebar.tsx  ThemeProvider.tsx  UserMenu.tsx  WorkflowBuilder.tsx
docs/: CURRENT-SUPABASE-DB-SCHEMA-FLOWFORGE.txt  DOCS_ORGANIZATION.md  PHASE-3-COMPLETION-SUMMARY.md  PHASE-3-SETUP-GUIDE.md  PHASE-4-AUTH-IMPLEMENTATION-CHECKLIST.md  PHASE-4-IMPLEMENTATION-COMPLETE.md  PHASE-4-READY-TO-IMPLEMENT.md  PHASE-4-VISUAL-GUIDE.md  README.md  cursor_3rd_november_2025_finalize_supabase_database_schem.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
golden_prds/: auth_unsafe.expected.yaml  auth_unsafe.md  invoice_parser.md  (+5 more)
(+53 files in other folders)
